# RAG-PDF-Chatbot

./: .gitignore  README.md  localRagApi.py  main.py  pyproject.toml  ragapi.py  remoteRagApi.py  requirements.txt
public/: index.html
public/js/: chatbot.js
